# otori-monitoring

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  cowrie.json  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
Interface_Moni/otori-monitoring/app/: db.py  kpi.py  main.py  models.py
Interface_Moni/otori-monitoring/app/web/: index.html
Interface_Moni/otori-monitoring/data/: cowrie.json
Interface_Moni/otori-monitoring/tools/: stream_cowrie_file.py
app/: config.py  cowrie_mapper.py  db.py  kpi.py  main.py  models.py
app/services/: __init__.py  bot_detector.py  classifier.py  geoip.py  mitre.py  scorer.py
app/web/: index.html
app/web/css/: styles.css
app/web/js/: charts.js  detail-handlers.js  filters.js  i18n.js  main.js  map.js  modals.js  utils.js
data/: cowrie.json
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  init-db.sql  nginx.conf
scripts/: generate_test_data.py
tests/: conftest.py  test_api.py
tools/: generate_fake_logs.py  stream_cowrie_file.py
