# ═══════════════════════════════════════════════════════════════════════════════
# Otori Monitoring - Project Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[project]
name = "otori-monitoring"
version = "2.0.0"
description = "Dashboard de monitoring et analytics pour honeypots Otori"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Otori Team", email = "contact@otori.dev" },
]
keywords = ["honeypot", "monitoring", "security", "analytics", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

dependencies = [
    # ─────────────────────────────────────────────────────────────────────────
    # Web Framework
    # ─────────────────────────────────────────────────────────────────────────
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # ─────────────────────────────────────────────────────────────────────────
    # Database
    # ─────────────────────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # ─────────────────────────────────────────────────────────────────────────
    # Configuration & Validation
    # ─────────────────────────────────────────────────────────────────────────
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # ─────────────────────────────────────────────────────────────────────────
    # GeoIP
    # ─────────────────────────────────────────────────────────────────────────
    "geoip2>=4.8.0",
    "maxminddb>=2.5.0",

    # ─────────────────────────────────────────────────────────────────────────
    # HTTP & Networking
    # ─────────────────────────────────────────────────────────────────────────
    "requests>=2.31.0",
    "httpx>=0.26.0",

    # ─────────────────────────────────────────────────────────────────────────
    # Utilities
    # ─────────────────────────────────────────────────────────────────────────
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",

    # Linting & Formatting
    "ruff>=0.2.0",
    "mypy>=1.8.0",

    # Types
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0",
]

[project.scripts]
otori-server = "app.main:run"
otori-stream = "tools.stream_cowrie_file:main"

[project.urls]
Homepage = "https://github.com/otori-lab/otori-monitoring"
Documentation = "https://github.com/otori-lab/otori-monitoring#readme"
Repository = "https://github.com/otori-lab/otori-monitoring"
Issues = "https://github.com/otori-lab/otori-monitoring/issues"

# ═══════════════════════════════════════════════════════════════════════════════
# Build System
# ═══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "tools"]

# ═══════════════════════════════════════════════════════════════════════════════
# Ruff (Linter & Formatter)
# ═══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from
]

[tool.ruff.lint.isort]
known-first-party = ["app", "tools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ═══════════════════════════════════════════════════════════════════════════════
# Pytest
# ═══════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

# ═══════════════════════════════════════════════════════════════════════════════
# Coverage
# ═══════════════════════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ═══════════════════════════════════════════════════════════════════════════════
# MyPy
# ═══════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
